Renamed to Aurelia

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Fundraiser &mdash; Website Template by Colorlib</title>
+  <title>Aurelia</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -64,14 +64,14 @@
             
 
             <div class="site-logo">
-              <a href="index.html" class="text-white">Fundraiser</a>
+              <a href="index.html" class="text-white">Aurelia</a>
             </div>
 
 
             <nav class="site-navigation text-left ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="about.html" class="nav-link">About Us</a></li>
+                <li><a href="problem.html" class="nav-link">Problem</a></li>
                 <li><a href="causes.html" class="nav-link">Our Causes</a></li>
                 <li><a href="blog.html" class="nav-link">Blog</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
