--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -11,16 +11,16 @@
 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="../CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="../CSS/animate.min.css">
+    <link rel="stylesheet" href="../CSS/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="../CSS/owl.carousel.min.css">
+    <link rel="stylesheet" href="../CSS/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../Fonts/flaticon-1/font/flaticon.css">
+    <link rel="stylesheet" href="../CSS/aos.css">
 
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 
   </head>
 
@@ -74,7 +74,6 @@
                 <li><a href="problem.html" class="nav-link">Problem</a></li>
                 <li><a href="causes.html" class="nav-link">Our Causes</a></li>
                 <li class="active"><a href="blog.html" class="nav-link">Blog</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
               </ul>
             </nav>
 
@@ -285,7 +284,6 @@
                   <li><a href="#">Testimonials</a></li>
                   <li><a href="#">Terms of Service</a></li>
                   <li><a href="#">Privacy</a></li>
-                  <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
 
