--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,12 @@
     <link rel="stylesheet" href="../Fonts/flaticon-1/font/flaticon.css">
     <link rel="stylesheet" href="../CSS/aos.css">
 
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+
+    <script src="../JS/tmachine.js"></script>
+
+
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
 
@@ -97,7 +103,11 @@
       <div class="box-92819">
         <h1 class="text-white mb-3">Join The Movement To end Child Poverty</h1>
         <p><a href="#" class="btn btn-primary py-3 px-4 rounded-0">Donate Now</a></p>
-      </div>
+        <div>Teachable Machine Image Model</div>
+        <button type="button" onclick="init()">Start</button>
+        <div id="webcam-container"></div>
+        <div id="label-container"></div>
+       </div>
 
       <div class="owl-carousel owl-1 ">
         <div class="ftco-cover-1 overlay" style="background-image: url('images/hero_1.jpg');"></div>
