--- a/HTML/index.html
+++ b/HTML/index.html
@@ -79,7 +79,7 @@
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="problem.html" class="nav-link">Problem</a></li>
                 <li><a href="causes.html" class="nav-link">Our Causes</a></li>
-                <li><a href="blog.html" class="nav-link">Blog</a></li>
+                <li><a href="privacy.html" class="nav-link">Privacy</a></li>
               </ul>
             </nav>
 
@@ -413,14 +413,15 @@
       </div>
     </div>
     
+    <!-- FOOTER -->
     <footer class="site-footer bg-white">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <div class="row">
               <div class="col-md-7">
-                <h2 class="footer-heading mb-4">About Us</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem modi, quaerat laborum id fugit blanditiis ratione delectus assumenda.</p>
+                <h2 class="footer-heading mb-4">Colorism</h2>
+                <p>Racial discrimination is a pervasive problem in the USA. As defined by Harvard, colorism, or skin color stratification, is a process that privileges light-skinned people of color over dark.</p>
 
               </div>
               <div class="col-md-4 ml-auto">
@@ -435,35 +436,13 @@
 
             </div>
           </div>
-          <div class="col-md-4 ml-auto">
-
-            <div class="mb-5">
-              <h2 class="footer-heading mb-4">Subscribe to Newsletter</h2>
-              <form action="#" method="post" class="footer-suscribe-form">
-                <div class="input-group mb-3">
-                  <input type="text" class="form-control rounded-0 border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                  <div class="input-group-append">
-                    <button class="btn btn-primary text-white" type="button" id="button-addon2">Subscribe</button>
-                  </div>
-                </div>
-            </div>
-
-
-            <h2 class="footer-heading mb-4">Follow Us</h2>
-            <a href="#about-section" class="smoothscroll pl-0 pr-3"><span class="icon-facebook"></span></a>
-            <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-            <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-            <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-            </form>
-          </div>
+ 
         </div>
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
             <div class="pt-5">
               <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            VT Hacks Submission | Created in part with <a href="https://colorlib.com" target="_blank" >Colorlib</a>
             </p>
             </div>
           </div>
