--- a/HTML/single.html
+++ b/HTML/single.html
@@ -70,7 +70,7 @@
             <nav class="site-navigation text-left ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="problem.html" class="nav-link">Problem</a></li>
+                <li><a href="applications.html" class="nav-link">Applications</a></li>
                 <li><a href="causes.html" class="nav-link">Our Causes</a></li>
                 <li class="active"><a href="privacy.html" class="nav-link">Privacy</a></li>
               </ul>
