--- a/HTML/index.html
+++ b/HTML/index.html
@@ -77,7 +77,7 @@
             <nav class="site-navigation text-left ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="problem.html" class="nav-link">Problem</a></li>
+                <li><a href="applications.html" class="nav-link">Applications</a></li>
                 <li><a href="causes.html" class="nav-link">Our Causes</a></li>
                 <li><a href="privacy.html" class="nav-link">Privacy</a></li>
               </ul>
@@ -261,62 +261,7 @@
       </div>
     </div>
 
-    <div class="bg-image overlay site-section" style="background-image: url('images/hero_1.jpg');">
-      <div class="container">
 
-        <div class="row align-items-center">
-          <div class="col-12">
-            <div class="row mb-5">
-              <div class="col-md-7">
-                <div class="heading-20219">
-                  <h2 class="title text-white mb-4 text-cursive">Why Choose Us</h2>
-                  <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt ipsam repellendus voluptatum, totam magni iusto numquam quo eos dolor perferendis.</p>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6 mb-5">
-                <div class="feature-29012 d-flex">
-                  <div class="number mr-4"><span>1</span></div>
-                  <div>
-                    <h3>Odit Reiciendis</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi id sint explicabo odit reiciendis eaque accusamus labore necessitatibus.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 mb-5">
-                <div class="feature-29012 d-flex">
-                  <div class="number mr-4"><span>2</span></div>
-                  <div>
-                    <h3>Nisi Sint Explicabo</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi id sint explicabo odit reiciendis eaque accusamus labore necessitatibus.</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-6 mb-5">
-                <div class="feature-29012 d-flex">
-                  <div class="number mr-4"><span>3</span></div>
-                  <div>
-                    <h3>Accusamus Labore Necessitatibus</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi id sint explicabo odit reiciendis eaque accusamus labore necessitatibus.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 mb-5">
-                <div class="feature-29012 d-flex">
-                  <div class="number mr-4"><span>4</span></div>
-                  <div>
-                    <h3>Consectetur Dolor Elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi id sint explicabo odit reiciendis eaque accusamus labore necessitatibus.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     </div>
     
