--- a/HTML/applications.html
+++ b/HTML/applications.html
@@ -94,8 +94,8 @@
       
 <!-- PROBLEM TAB -->
       <div class="box-92819">
-        <h1 class="text-white mb-3">Problem</h1>
-        <p class="lead text-white">Colorism as a systemic issue that negatively affects people's access to opportunities, safety, and fair representation in technology.</p>
+        <h1 class="text-white mb-3">Applications</h1>
+        <p class="lead text-white">Text</p>
       </div>
 
       
