--- a/HTML/index.html
+++ b/HTML/index.html
@@ -155,7 +155,7 @@
             </div>
           </div>
           <div class="col-md-8">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga ea reprehenderit rerum magnam, ipsum aperiam. Earum, expedita ratione.</p>
+            <p>Colorism as a systemic issue that negatively affects people's access to opportunities, safety, and fair representation in technology.</p>
           </div>
         </div>
 
