--- a/HTML/causes.html
+++ b/HTML/causes.html
@@ -70,8 +70,8 @@
             <nav class="site-navigation text-left ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
+                <li class="active"><a href="about.html" class="nav-link">About Us</a></li>
                 <li><a href="applications.html" class="nav-link">Applications</a></li>
-                <li class="active"><a href="causes.html" class="nav-link">Our Causes</a></li>
                 <li><a href="privacy.html" class="nav-link">Privacy</a></li>
               </ul>
             </nav>
