Finished the About Us page

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -111,9 +111,10 @@
           <div class="col-md-5">
             <div class="heading-20219">
               <h2 class="title text-cursive mb-4">Our Team</h2>
-              <p>Welcome message.</p>
-              <p>Next paragraph.</p>
-            </div>
+              <p>Welcome! Aurelia is derived from the Latin word aureus meaning "golden". It repersents the skin complexion of the community we chose to highlight. </p>
+              <p>As black students, we are constantly exposed to emerging technologies. Sometimes, though, we ask ourselves, "Why can't technology see me?" The most frequent and frustrating example of this is failing to activate touchless faucets in bathrooms. It is especially frustrating watching others with lighter skin use these systems with ease.</p>
+              <p>We wanted to develop a solution that paves the way for future tech. Meet the faces behind Aurelia!</p>
+          </div>
           </div>
           <div class="col-md-7">
             <div class="cause shadow-sm">
@@ -131,7 +132,7 @@
                   <span class="badge-danger py-1 small px-2 rounded mb-3 d-inline-block">Us</span>
                   <h3 class="mb-4"><a href="#">Our Team</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
-                    <div>Donated</div>
+                    <div>Virginia Tech College of Engineering</div>
                   </div>
 
                 </div>
@@ -145,7 +146,7 @@
               <div class="cause shadow-sm">
               
                 <a href="#" class="cause-link d-block">
-                  <img src="images/img_1.jpg" alt="Image" class="img-fluid">
+                  <img src="../images/nissi-pic.png" alt="Nissi's Picture" class="img-fluid">
                   <div class="custom-progress-wrap">
                     <div class="custom-progress-inner">
                       <div class="custom-progress bg-danger" style="width: 80%;"></div>
@@ -154,7 +155,6 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border shadow-sm">
-                  <span class="badge-danger py-1 small px-2 rounded mb-3 d-inline-block">School</span>
                   <h3 class="mb-4"><a href="#">Nissi Otoo</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                     <div>2nd-year Computer Engineering</div>
@@ -179,7 +179,6 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border shadow-sm">
-                  <span class="badge-primary py-1 small px-2 rounded mb-3 d-inline-block">Health</span>
                   <h3 class="mb-4"><a href="#">Joshua Essandoh</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                     <div>2nd-year Computer Engineering</div>
@@ -196,7 +195,7 @@
             <div class="cause shadow-sm">
               
                 <a href="#" class="cause-link d-block">
-                  <img src="images/img_3.jpg" alt="Image" class="img-fluid">
+                  <img src="../images/amy-pic.png" alt="Amy's Picture" class="img-fluid">
                   <div class="custom-progress-wrap">
                     <div class="custom-progress-inner">
                       <div class="custom-progress bg-warning" style="width: 80%;"></div>
@@ -205,7 +204,6 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border ">
-                  <span class="badge-warning py-1 small px-2 rounded mb-3 d-inline-block">Livelihood</span>
                   <h3 class="mb-4"><a href="#">Amy Weston</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                   <div>2nd-year Computer Science</div>
@@ -240,12 +238,12 @@
 
               </div>
               <div class="col-md-4 ml-auto">
-                <h2 class="footer-heading mb-4">Features</h2>
+                <h2 class="footer-heading mb-4">Quick Links</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Privacy</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="applications.html">Applications</a></li>
+                  <li><a href="privacy.html">Privacy</a></li>
                 </ul>
               </div>
 
