--- a/HTML/privacy.html
+++ b/HTML/privacy.html
@@ -95,7 +95,7 @@
 
       <div class="box-92819">
         <h1 class="text-white mb-3">Privacy</h1>
-        <p class="lead text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt ab doloremque a quia laboriosam suscipit, iure illum perspiciatis!</p>
+        <p class="lead text-white">We respect user privacy and minimize data risks for all communities.</p>
       </div>
 
       
