Added privacy pic

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -153,7 +153,7 @@
             <div class="cause shadow-sm">
               
                 <a href="#" class="cause-link d-block">
-                  <img src="images/img_2.jpg" alt="Image" class="img-fluid">
+                  <img src="../images/josh-pic.png" alt="Image" class="img-fluid">
                   <div class="custom-progress-wrap">
                     <div class="custom-progress-inner">
                       <div class="custom-progress bg-primary" style="width: 80%;"></div>
@@ -165,7 +165,7 @@
                   <h3 class="mb-4"><a href="#">Joshua Essandoh</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                     <div>2nd-year Computer Engineering</div>
-                    <div class="ml-auto"><a href="https://www.linkedin.com/in/nissi-otoo/" target="_blank" >LinkedIn</a></div>
+                    <div class="ml-auto"><a href="https://www.linkedin.com/in/joshua-essandoh-39411228a/" target="_blank" >LinkedIn</a></div>
                   </div>
 
                 </div>
