--- a/HTML/index.html
+++ b/HTML/index.html
@@ -63,10 +63,18 @@
 
             <nav class="site-navigation text-left ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
-                <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="about.html" class="nav-link">About Us</a></li>
-                <li><a href="applications.html" class="nav-link">Applications</a></li>
-                <li><a href="privacy.html" class="nav-link">Privacy</a></li>
+                <li class="active"><a href="index.html" class="nav-link">
+                  <button class="new-button header-button">Home</button>
+                </a></li>
+                <li><a href="about.html" class="nav-link">
+                  <button class="new-button header-button">About Us</button>
+                </a></li>
+                <li><a href="applications.html" class="nav-link">
+                  <button class="new-button header-button">Applications</button>
+                </a></li>
+                <li><a href="privacy.html" class="nav-link">
+                  <button class="new-button header-button">Privacy</button>
+                </a></li>
               </ul>
             </nav>
 
@@ -341,10 +349,18 @@
               <div class="col-md-4 ml-auto">
                 <h2 class="footer-heading mb-4">Features</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">
+                    <button class="new-button">About Us</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Testimonial</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Terms of Service</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Privacy</button>
+                  </a></li>
                 </ul>
               </div>
 
