--- a/HTML/privacy.html
+++ b/HTML/privacy.html
@@ -52,13 +52,20 @@
 
             <nav class="site-navigation text-left ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="about.html" class="nav-link">About Us</a></li>
-                <li><a href="applications.html" class="nav-link">Applications</a></li>
-                <li class="active"><a href="privacy.html" class="nav-link">Privacy</a></li>
+                <li class="active"><a href="index.html" class="nav-link">
+                  <button class="new-button header-button">Home</button>
+                </a></li>
+                <li><a href="about.html" class="nav-link">
+                  <button class="new-button header-button">About Us</button>
+                </a></li>
+                <li><a href="applications.html" class="nav-link">
+                  <button class="new-button header-button">Applications</button>
+                </a></li>
+                <li><a href="privacy.html" class="nav-link">
+                  <button class="new-button header-button">Privacy</button>
+                </a></li>
               </ul>
             </nav>
-
 
             <div class="ml-auto toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-white"><span class="icon-menu h3 text-white"></span></a></div>
 
