--- a/HTML/applications.html
+++ b/HTML/applications.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../CSS/owl.theme.default.min.css">
     <link rel="stylesheet" href="../Fonts/flaticon-1/font/flaticon.css">
     <link rel="stylesheet" href="../CSS/aos.css">
+    <link rel="stylesheet" href="../CSS/app.css">
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
