another touch up

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -232,10 +232,18 @@
               <div class="col-md-4 ml-auto">
                 <h2 class="footer-heading mb-4">Quick Links</h2>
                 <ul class="list-unstyled">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="applications.html">Applications</a></li>
-                  <li><a href="privacy.html">Privacy</a></li>
+                  <li><a href="#">
+                    <button class="new-button">About Us</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Testimonial</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Terms of Service</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Privacy</button>
+                  </a></li>
                 </ul>
               </div>
 
