--- a/HTML/applications.html
+++ b/HTML/applications.html
@@ -171,10 +171,18 @@
               <div class="col-md-4 ml-auto">
                 <h2 class="footer-heading mb-4">Features</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">
+                    <button class="new-button">About Us</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Testimonial</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Terms of Service</button>
+                  </a></li>
+                  <li><a href="#">
+                    <button class="new-button">Privacy</button>
+                  </a></li>
                 </ul>
               </div>
 
