--- a/HTML/index.html
+++ b/HTML/index.html
@@ -347,18 +347,18 @@
 
               </div>
               <div class="col-md-4 ml-auto">
-                <h2 class="footer-heading mb-4">Features</h2>
+                <h2 class="footer-heading mb-4">Quick Links</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">
+                  <li><a href="index.html">
+                    <button class="new-button">Home</button>
+                  </a></li>
+                  <li><a href="about.html">
                     <button class="new-button">About Us</button>
                   </a></li>
-                  <li><a href="#">
-                    <button class="new-button">Testimonial</button>
+                  <li><a href="applications.html">
+                    <button class="new-button">Applications</button>
                   </a></li>
-                  <li><a href="#">
-                    <button class="new-button">Terms of Service</button>
-                  </a></li>
-                  <li><a href="#">
+                  <li><a href="privacy.html">
                     <button class="new-button">Privacy</button>
                   </a></li>
                 </ul>
