--- a/HTML/applications.html
+++ b/HTML/applications.html
@@ -167,24 +167,23 @@
                 <h2 class="footer-heading mb-4">Colorism</h2>
                 <p>Racial discrimination is a pervasive problem in the USA. As defined by Harvard, colorism, or skin color stratification, is a process that privileges light-skinned people of color over dark.</p>
 
-              </div>
-              <div class="col-md-4 ml-auto">
-                <h2 class="footer-heading mb-4">Features</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">
-                    <button class="new-button">About Us</button>
-                  </a></li>
-                  <li><a href="#">
-                    <button class="new-button">Testimonial</button>
-                  </a></li>
-                  <li><a href="#">
-                    <button class="new-button">Terms of Service</button>
-                  </a></li>
-                  <li><a href="#">
-                    <button class="new-button">Privacy</button>
-                  </a></li>
-                </ul>
-              </div>
+                <div class="col-md-4 ml-auto">
+                  <h2 class="footer-heading mb-4">Quick Links</h2>
+                  <ul class="list-unstyled">
+                    <li><a href="index.html">
+                      <button class="new-button">Home</button>
+                    </a></li>
+                    <li><a href="about.html">
+                      <button class="new-button">About Us</button>
+                    </a></li>
+                    <li><a href="applications.html">
+                      <button class="new-button">Applications</button>
+                    </a></li>
+                    <li><a href="privacy.html">
+                      <button class="new-button">Privacy</button>
+                    </a></li>
+                  </ul>
+                </div>
 
             </div>
           </div>
