I dont remember what i did lol

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -150,10 +150,9 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border shadow-sm">
-                  <h3 class="mb-4"><a href="#">Alias Odit Ipsam Quas Unde Obcaecati</a></h3>
+                  <h3 class="mb-4"><a href="#">Problem 1</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
-                    <div>Donated</div>
-                    <div class="ml-auto"><strong class="text-primary">$32,919</strong></div>
+                    <div>Describe problem here.</div>
                   </div>
 
                 </div>
@@ -174,10 +173,9 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border shadow-sm">
-                  <h3 class="mb-4"><a href="#">Alias Odit Ipsam Quas Unde Obcaecati</a></h3>
+                  <h3 class="mb-4"><a href="#">Problem 2</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
-                    <div>Donated</div>
-                    <div class="ml-auto"><strong class="text-primary">$32,919</strong></div>
+                    <div>Describe problem here.</div>
                   </div>
 
                 </div>
@@ -199,10 +197,9 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border ">
-                  <h3 class="mb-4"><a href="#">Alias Odit Ipsam Quas Unde Obcaecati</a></h3>
+                  <h3 class="mb-4"><a href="#">Problem 3</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
-                    <div>Donated</div>
-                    <div class="ml-auto"><strong class="text-primary">$32,919</strong></div>
+                    <div>Describe problem here.</div>
                   </div>
 
                 </div>
