--- a/HTML/index.html
+++ b/HTML/index.html
@@ -128,7 +128,7 @@
         <div class="row mb-5 align-items-st">
           <div class="col-md-4">
             <div class="heading-20219">
-              <h2 class="title text-cursive">Problem</h2>
+              <h2 class="title text-cursive" style="color: black;">Problem</h2>
             </div>
           </div>
           <div class="col-md-8">
