Added amy's linkedin

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -199,7 +199,7 @@
                   <h3 class="mb-4"><a href="#">Amy Weston</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                   <div>2nd-year Computer Science</div>
-                  <div class="ml-auto"><a href="https://www.linkedin.com/in/nissi-otoo/" target="_blank" >LinkedIn</a></div>
+                  <div class="ml-auto"><a href="https://www.linkedin.com/in/amywestonaw/" target="_blank" >LinkedIn</a></div>
                   </div>
 
                 </div>
