--- a/HTML/index.html
+++ b/HTML/index.html
@@ -100,7 +100,7 @@
       <div class="opacity"></div>
 
       <div class="hero-container">
-        <div class="title">Aurelia</div>
+        <div class="title allura-regular">Aurelia</div>
 
         
        </div>
