gosh darn black stuff

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -101,7 +101,7 @@
         
           
             <div class="heading-20219">
-              <h2 class="title text-cursive mb-4">Our Team</h2>
+              <h2 class="text-cursive mb-4">Our Team</h2>
               <p>Welcome! Aurelia is derived from the Latin word aureus meaning "golden". It repersents the skin complexion of the community we chose to highlight. </p>
               <p>As black students, we are constantly exposed to emerging technologies. Sometimes, though, we ask ourselves, "Why can't technology see me?" The most frequent and frustrating example of this is failing to activate touchless faucets in bathrooms. It is especially frustrating watching others with lighter skin use these systems with ease.</p>
               <p>We wanted to develop a solution that paves the way for future tech. Meet the faces behind Aurelia!</p>
