Removed ALL dc3545

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -122,7 +122,7 @@
                   <img src="../images/nissi-pic.png" alt="Nissi's Picture" class="img-fluid">
                   <div class="custom-progress-wrap">
                     <div class="custom-progress-inner">
-                      <div class="custom-progress bg-danger" style="width: 80%;"></div>
+                      <div class="custom-progress" style="width: 80%;"></div>
                     </div>
                   </div>
                 </a>
@@ -146,7 +146,7 @@
                   <img src="../images/josh-pic.png" alt="Image" class="img-fluid">
                   <div class="custom-progress-wrap">
                     <div class="custom-progress-inner">
-                      <div class="custom-progress bg-primary" style="width: 80%;"></div>
+                      <div class="custom-progress" style="width: 80%;"></div>
                     </div>
                   </div>
                 </a>
@@ -171,7 +171,7 @@
                   <img src="../images/amy-pic.png" alt="Amy's Picture" class="img-fluid">
                   <div class="custom-progress-wrap">
                     <div class="custom-progress-inner">
-                      <div class="custom-progress bg-warning" style="width: 80%;"></div>
+                      <div class="custom-progress" style="width: 80%;"></div>
                     </div>
                   </div>
                 </a>
