--- a/HTML/index.html
+++ b/HTML/index.html
@@ -122,9 +122,9 @@
 
     <div class="demo-container">
       <div class="demo-title">Teachable Machine</div>
-        <button class="d-button" type="button" onclick="init()">Start</button>
+        <button class="d-button" type="button" onclick="init()"  onclick="classChange()"  id="d-button">Start</button>
         <div class="webcam"  id="webcam-container"></div>
-        <div class="label" id="label-container"></div>
+        <div id="label-container"></div>
     </div>
 
     <div class="site-section">
