--- a/HTML/index.html
+++ b/HTML/index.html
@@ -155,7 +155,7 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border shadow-sm">
-                  <h3 class="mb-4"><a href="#">Proctoring Technology</a></h3>
+                  <h3 class="mb-4"><a href="https://otl.du.edu/inclusive-use-of-proctoring-technology-lockdown-browser-respondus-monitor/">Proctoring Technology</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                     <div>Proctoring tools like LockDown Browser + Respondus Monitor show bias against darker skin, often due to poor lighting. This results in frequent false alarms, unfairly penalizing students.</div>
                   </div>
@@ -178,7 +178,7 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border shadow-sm">
-                  <h3 class="mb-4"><a href="#">Self-Driving Cars</a></h3>
+                  <h3 class="mb-4"><a href="https://www.vox.com/future-perfect/2019/3/5/18251924/self-driving-car-racial-bias-study-autonomous-vehicle-dark-skin">Self-Driving Cars</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                     <div>Self-driving cars struggle to spot dark-skinned pedestrians accurately, with detection rates about five percentage points lower. This issue raises safety concerns.</div>
                   </div>
@@ -192,7 +192,7 @@
             
             <div class="cause shadow-sm">
               
-                <a href="https://www.theverge.com/2015/7/1/88100363/google-apologizes-photos-app-tags-two-black-people-gorillas" class="cause-link d-block">
+                <a href="https://www.bbc.com/news/technology-33347866" class="cause-link d-block">
                   <img src="../images/gorilla-pic.png" alt="Gorilla Image" class="img-fluid">
                   <div class="custom-progress-wrap">
                     <div class="custom-progress-inner">
@@ -202,7 +202,7 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border ">
-                  <h3 class="mb-4"><a href="#">Mislabeling Black People as Gorillas</a></h3>
+                  <h3 class="mb-4"><a href="https://www.bbc.com/news/technology-33347866">Mislabeling Black People as Gorillas</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                     <div>Google Photos once mistakenly tagged Black people as "gorillas," revealing serious AI bias. This highlighted the need for better, more inclusive technology.</div>
                   </div>
