--- a/HTML/index.html
+++ b/HTML/index.html
@@ -157,7 +157,7 @@
                 <div class="px-3 pt-3 border-top-0 border border shadow-sm">
                   <h3 class="mb-4"><a href="https://otl.du.edu/inclusive-use-of-proctoring-technology-lockdown-browser-respondus-monitor/">Proctoring Technology</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
-                    <div>Proctoring tools like LockDown Browser + Respondus Monitor show bias against darker skin, often due to poor lighting. This results in frequent false alarms, unfairly penalizing students.</div>
+                    <div>Tools like LockDown Browser + Respondus Monitor show bias against darker skin, often due to poor lighting. This results in frequent false alarms, unfairly penalizing students.</div>
                   </div>
 
                 </div>
@@ -202,7 +202,7 @@
                 </a>
 
                 <div class="px-3 pt-3 border-top-0 border border ">
-                  <h3 class="mb-4"><a href="https://www.bbc.com/news/technology-33347866">Mislabeling Black People as Gorillas</a></h3>
+                  <h3 class="mb-4"><a href="https://www.bbc.com/news/technology-33347866">Mislabeling People as Gorillas</a></h3>
                   <div class="border-top border-light border-bottom py-2 d-flex">
                     <div>Google Photos once mistakenly tagged Black people as "gorillas," revealing serious AI bias. This highlighted the need for better, more inclusive technology.</div>
                   </div>
