--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,6 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 
     <script src="../JS/tmachine.js"></script>
+    <script src="../JS/script.js"></script>
 
 
     <!-- MAIN CSS -->
