--- a/HTML/index.html
+++ b/HTML/index.html
@@ -132,7 +132,7 @@
             </div>
           </div>
           <div class="col-md-8">
-            <p>Colorism as a systemic issue that negatively affects people's access to opportunities, safety, and fair representation in technology.</p>
+            <p style="font-weight: 500;">Colorism as a systemic issue that negatively affects people's access to opportunities, safety, and fair representation in technology.</p>
           </div>
         </div>
 
