pls be the last one

--- a/HTML/applications.html
+++ b/HTML/applications.html
@@ -27,7 +27,7 @@
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
     
-    <div class="site-wrap" id="home-section">
+    <div class="site-wrap" id="home-section" style="background-color: beige;">
 
       <div class="site-mobile-menu site-navbar-target">
         <div class="site-mobile-menu-header">
@@ -117,17 +117,7 @@
 
 
     </div>
-    <div class="col-md-4 sidebar">
-      <div class="sidebar-box">
-        <form action="#" class="search-form">
-          <!-- <div class="form-group"> -->
-           <!-- <span class="icon fa fa-search"></span> -->
-           <!--<input type="text" class="form-control" placeholder="Type a keyword and hit enter">-->
-          <!-- </div> -->
-        </form>
-      </div>
-      <div class="sidebar-box">
-      </div>
+   
 
       <!-- FOR FORMATTING A POSSIBLE SIDEBAR -->
       <div class="sidebar-box">
