--- a/HTML/index.html
+++ b/HTML/index.html
@@ -93,10 +93,10 @@
 
       </header>
   
-    <div class="hero-section">
+    <div class="hero-section" style="background-color: beige;">
       <div class="opacity"></div>
 
-      <div class="hero-container">
+      <div class="hero-container" >
         <div class="title allura-regular">Aurelia</div>
 
         
@@ -122,7 +122,7 @@
         <div id="label-container"></div>
     </div>
 
-    <div class="site-section">
+    <div class="site-section" style="background-color: beige;">
       <div class="container">
         
         <div class="row mb-5 align-items-st">
