--- a/HTML/privacy.html
+++ b/HTML/privacy.html
@@ -24,7 +24,7 @@
 
   </head>
 
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" style="background-color: beige;">
 
       
       <header class="site-navbar site-navbar-target bg-secondary shadow" role="banner">
@@ -99,7 +99,7 @@
     </div>
     
     <!-- FOOTER -->
-    <footer class="site-footer bg-white">
+    <footer class="site-footer bg-beige" style="background-color: beige;">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
