--- a/HTML/index.html
+++ b/HTML/index.html
@@ -217,7 +217,7 @@
   
     
     <!-- FOOTER -->
-    <footer class="site-footer bg-white">
+    <footer class="site-footer bg-beige" style="background-color: beige;">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
