sobbing and tired rn :(

--- a/HTML/applications.html
+++ b/HTML/applications.html
@@ -108,7 +108,7 @@
         Other applications include motion sensor techonology such as automatic sinks, soap dispensers, and even self-driving vehicles.</p>
 
       <p class="lead"><strong>Commercial Applications in Professional Photography and Videography Services</strong></p>
-      <p>Our tool can be used in professional environemnts to ensure accurate lighting conditions for <strong>ALL</strong> skin tones and inclusive media representation. 
+      <p>Our tool can be used in professional environments to ensure accurate lighting conditions for <strong>ALL</strong> skin tones and inclusive media representation. 
         Additionally, our technology could be implemented in online meeting platforms to help users present themselves better under different lighting situations during virtual calls.</p>
 
       <p class = "lead"><strong>Applications in the Classroom</strong></p>
