--- a/HTML/applications.html
+++ b/HTML/applications.html
@@ -127,7 +127,7 @@
 </div>
 
 <!-- FOOTER -->
-<footer class="site-footer bg-white">
+<footer class="site-footer bg-beige" style="background-color: beige;">
 <div class="container">
   <div class="row">
     <div class="col-md-6">
